[project]
name = "show-status-each-github-action"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jylenhof", email = "jygithub@lenhof.eu.org" }
]
requires-python = ">=3.14"
dependencies = [
    "pygithub>=2.9.0",
]

[project.scripts]
show-status-each-github-action = "show_status_each_github_action:main"

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
